--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
         <h1>Amy Bennett</h1>
         <p>
-          I'm a...
+          I am a...
           <span
             class="typed"
-            data-typed-items="Developer, Web/Graphic/UX Designer, Team Builder, "
+            data-typed-items="Developer, Web/Graphic/UX/UI Designer, Team Builder, Problem Solver, Student of Life"
           ></span>
         </p>
         <div class="social-links">
@@ -1202,7 +1202,7 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
-        <h3>Brandon Johnson</h3>
+        <h3>Amy Bennett</h3>
         <p>
           Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni
           eligendi fuga maxime saepe commodi placeat.
