--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
           ></span>
         </p>
         <div class="social-links">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/AmyBennettDev" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=100068315574317" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/amy.bennett.dev/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+          <a href="https://www.linkedin.com/in/amy-bennett-996837213/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
     </section>
@@ -131,7 +131,7 @@
               <img src="assets/img/profile-pic.png" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <h3>UI/UX Designer &amp; Web Developer.</h3>
+              <h3>Web Developer &amp; Graphic/Web/UX/UI Designer</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -139,43 +139,43 @@
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
+                    <!-- <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Birthday:</strong> <span>24 June 1977</span>
+                    </li> -->
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Birthday:</strong> <span>1 May 1995</span>
+                      <strong>Email:</strong>
+                      <span></span><a href="mailto:amy.bennett.dev@gmail.com">amy.bennett.dev@gmail.com</a></span>
+                    </li>
+                    <!-- <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Category:</strong>
+                      <span>data</span>
+                    </li> -->
+                    <li>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Location:</strong> <span>Washington, USA</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.example.com</span>
-                    </li>
-                    <li>
-                      <i class="bi bi-chevron-right"></i>
-                      <strong>Phone:</strong> <span>+123 456 7890</span>
-                    </li>
-                    <li>
-                      <i class="bi bi-chevron-right"></i>
-                      <strong>City:</strong> <span>New York, USA</span>
+                      <strong>Freelance/Hiring Status:</strong> <span>Available</span>
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
                     <li>
-                      <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>30</span>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Degree:</strong>
+                      <span>AAT - Web Development</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Degree:</strong> <span>Master</span>
+                      <strong>Currently Earning:</strong>
+                      <span>AAT - Digital Media Arts</span>
                     </li>
-                    <li>
-                      <i class="bi bi-chevron-right"></i>
-                      <strong>PhEmailone:</strong>
-                      <span>email@example.com</span>
-                    </li>
-                    <li>
-                      <i class="bi bi-chevron-right"></i>
-                      <strong>Freelance:</strong> <span>Available</span>
-                    </li>
+                    
                   </ul>
                 </div>
               </div>
@@ -1134,7 +1134,7 @@
 
             <div class="col-lg-8 mt-5 mt-lg-0">
               <form
-                action="forms/contact.php"
+                action="https://formspree.io/f/xjvjwoap"
                 method="post"
                 role="form"
                 class="php-email-form"
