--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
                 class="php-email-form"
               >
                 <div class="row">
-                  <div class="col-md-6 form-group">
+                  <!-- <div class="col-md-6 form-group">
                     <input
                       type="text"
                       name="name"
@@ -1149,7 +1149,7 @@
                       placeholder="Your Name"
                       required
                     />
-                  </div>
+                  </div> -->
                   <div class="col-md-6 form-group mt-3 mt-md-0">
                     <input
                       type="email"
@@ -1162,7 +1162,7 @@
                   </div>
                 </div>
                 <div class="form-group mt-3">
-                  <input
+                  <!-- <input
                     type="text"
                     class="form-control"
                     name="subject"
@@ -1170,7 +1170,7 @@
                     placeholder="Subject"
                     required
                   />
-                </div>
+                </div> -->
                 <div class="form-group mt-3">
                   <textarea
                     class="form-control"
