--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           <div class="section-title">
             <h2>Portfolio</h2>
             <p>
-              This is a fluid portfolio that will continuously grow.
+              Academic and Professional Projects
             </p>
           </div>
 
@@ -560,16 +560,16 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpg"
+                  src="assets/img/portfolio/image-gallery-8.PNG"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>App</p>
+                  <h4>Image Gallery</h4>
+                  <p>Web Application</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-1.jpg"
+                      href="assets/img/portfolio/image-gallery-8.PNG"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="App 1"
@@ -587,26 +587,26 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-2.jpg"
+                  src="assets/img/portfolio/owl.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Web 3</h4>
-                  <p>Web</p>
+                  <h4>"Veghead" Project</h4>
+                  <p>Graphic Composite</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-2.jpg"
+                      href="assets/img/portfolio/owl.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 3"
+                      title="App 2"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details-3.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
@@ -620,23 +620,23 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.jpg"
+                  src="assets/img/portfolio/temp-converter-1.PNG"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 2</h4>
-                  <p>App</p>
+                  <h4>Temperature Converter</h4>
+                  <p>Web Application</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-3.jpg"
+                      href="assets/img/portfolio/temp-converter-1.PNG"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 2"
+                      title="Web 3"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details-2.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
@@ -650,23 +650,23 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-4.jpg"
+                  src="assets/img/portfolio/p-shadow-birds2-425.gif"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Card 2</h4>
-                  <p>Card</p>
+                  <h4>Original GIF</h4>
+                  <p>Graphics Interchange Format</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-4.jpg"
+                      href="assets/img/portfolio/p-shadow-birds2-425.gif"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Card 2"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details-4.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
@@ -677,26 +677,26 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-5.jpg"
+                  src="assets/img/portfolio/shapes-fairy-2.PNG"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Web 2</h4>
-                  <p>Web</p>
+                  <h4>Shapes Project</h4>
+                  <p>Scalable Vector Graphic</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-5.jpg"
+                      href="assets/img/portfolio/shapes-fairy-1.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
                       title="Web 2"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details-5.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
