--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -43,7 +43,7 @@
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    ======================================================== -->
   </head>
 
   <body>
@@ -57,27 +57,28 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-8.PNG"
+                      src="assets/img/portfolio/temp-converter-1.PNG"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-9.PNG"
+                      src="assets/img/portfolio/temp-converter-2.PNG"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-10.PNG"
+                      src="assets/img/portfolio/temp-converter-3.PNG"
                       alt=""
                     />
                   </div>
+
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-12.PNG"
+                      src="assets/img/portfolio/temp-converter-4.PNG"
                       alt=""
                     />
                   </div>
@@ -88,30 +89,26 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Image Gallery</h3>
+                <h3>Temperature Converter</h3>
                 <ul>
                   <li><strong>Category</strong>: Web Development</li>
                   <li><strong>Type</strong>: Academic</li>
-                  <li><strong>Project date</strong>: March 2021</li>
-                  <li>
-                    <strong>Used</strong>: PHP, JavaScript, Bootstrap, HTML,
-                    CSS, SQL
-                  </li>
+                  <li><strong>Project date</strong>: January 2021</li>
+                  <li><strong>Used</strong>: PHP, HTML, CSS, Bootstrap</li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>The Goal:</h2>
                 <p>
-                  Build and style a fully functional image gallery application.
-                  Gallery must only be accessible to registered users and become
-                  unavailable upon logout.
+                  Build and style a fully functional temperature converter that
+                  will convert to and from Fahrenheit, Celsius and Kelvin units.
                 </p>
                 <h2>The Process and Result:</h2>
                 <p>
-                  Using PHP, SQL, JavaScript, HTML, CSS and Bootstrap, I created
-                  an image gallery that allows a registered user to select files
-                  from their computer to upload directly to their private
-                  gallery. The gallery is secured via a login/logout process.
+                  Using PHP, HTML, CSS and Bootstrap, I created a fully
+                  responsive web application that will accurately convert
+                  temperatures. It was given a circus/carnival styling to
+                  represent the type of variety I aniticipate encountering.
                 </p>
               </div>
             </div>
