--- a/portfolio-details-5.html
+++ b/portfolio-details-5.html
@@ -56,30 +56,15 @@
               <div class="portfolio-details-slider swiper-container">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-8.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/shapes-fairy-2.PNG" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-9.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/shapes-fairy-3.PNG" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-10.PNG"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-12.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/shapes-fairy-1.jpg" alt="" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -88,30 +73,28 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Image Gallery</h3>
+                <h3>Shapes Project</h3>
                 <ul>
-                  <li><strong>Category</strong>: Web Development</li>
+                  <li><strong>Category</strong>: Graphic Design</li>
                   <li><strong>Type</strong>: Academic</li>
-                  <li><strong>Project date</strong>: March 2021</li>
-                  <li>
-                    <strong>Used</strong>: PHP, JavaScript, Bootstrap, HTML,
-                    CSS, SQL
-                  </li>
+                  <li><strong>Project date</strong>: April 2021</li>
+                  <li><strong>Used</strong>: Adobe Illustrator</li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>The Goal:</h2>
+
                 <p>
-                  Build and style a fully functional image gallery application.
-                  Gallery must only be accessible to registered users and become
-                  unavailable upon logout.
+                  Create a Scalable Vector Graphic using only the shapes tool.
                 </p>
                 <h2>The Process and Result:</h2>
+
                 <p>
-                  Using PHP, SQL, JavaScript, HTML, CSS and Bootstrap, I created
-                  an image gallery that allows a registered user to select files
-                  from their computer to upload directly to their private
-                  gallery. The gallery is secured via a login/logout process.
+                  Using a reference photo from a copyright-free resource, I
+                  created a Scalable Vector Graphic using only the Shapes tool.
+                  I chose to use a different shape for each wing segment. My
+                  goal was to mimic the translucence of insect wings by
+                  utilizing negative space between each shape.
                 </p>
               </div>
             </div>
