--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -56,30 +56,18 @@
               <div class="portfolio-details-slider swiper-container">
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-8.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/owl.jpg" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-9.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/owl-reference.PNG" alt="" />
                   </div>
 
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-10.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/owl-fruit.jpg" alt="" />
                   </div>
                   <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-12.PNG"
-                      alt=""
-                    />
+                    <img src="assets/img/portfolio/owl.jpg" alt="" />
                   </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -88,30 +76,30 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Image Gallery</h3>
+                <h3>"Veghead" Project</h3>
                 <ul>
-                  <li><strong>Category</strong>: Web Development</li>
+                  <li><strong>Category</strong>: Graphic Design</li>
                   <li><strong>Type</strong>: Academic</li>
-                  <li><strong>Project date</strong>: March 2021</li>
-                  <li>
-                    <strong>Used</strong>: PHP, JavaScript, Bootstrap, HTML,
-                    CSS, SQL
-                  </li>
+                  <li><strong>Project date</strong>: January 2020</li>
+                  <li><strong>Used</strong>: Adobe Photoshop</li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>The Goal:</h2>
+
                 <p>
-                  Build and style a fully functional image gallery application.
-                  Gallery must only be accessible to registered users and become
-                  unavailable upon logout.
+                  Using a variety of provided images of fruits and veggies,
+                  create a character.
                 </p>
                 <h2>The Process and Result:</h2>
+
                 <p>
-                  Using PHP, SQL, JavaScript, HTML, CSS and Bootstrap, I created
-                  an image gallery that allows a registered user to select files
-                  from their computer to upload directly to their private
-                  gallery. The gallery is secured via a login/logout process.
+                  Using a reference photo from a copyright-free resource, I
+                  created depth and texture by varying the types of produce
+                  used. I created each shape to fit the sections, attempting to
+                  maintain the integrity of the image. I wanted each section to
+                  be identifiable as the fruit or vegetable in the original
+                  photos.
                 </p>
               </div>
             </div>
