--- a/portfolio-details-4.html
+++ b/portfolio-details-4.html
@@ -57,27 +57,21 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-8.PNG"
+                      src="assets/img/portfolio/p-shadow-birds2.gif"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-9.PNG"
+                      src="assets/img/portfolio/p-shadow-birds-2.PNG"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="assets/img/portfolio/image-gallery-10.PNG"
-                      alt=""
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/image-gallery-12.PNG"
+                      src="assets/img/portfolio/p-shadow-birds-3.PNG"
                       alt=""
                     />
                   </div>
@@ -88,30 +82,33 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Image Gallery</h3>
+                <h3>Original GIF Creation</h3>
                 <ul>
-                  <li><strong>Category</strong>: Web Development</li>
+                  <li><strong>Category</strong>: Graphic Design</li>
                   <li><strong>Type</strong>: Academic</li>
-                  <li><strong>Project date</strong>: March 2021</li>
-                  <li>
-                    <strong>Used</strong>: PHP, JavaScript, Bootstrap, HTML,
-                    CSS, SQL
-                  </li>
+                  <li><strong>Project date</strong>: January 2020</li>
+                  <li><strong>Used</strong>: Adobe Photoshop</li>
                 </ul>
               </div>
               <div class="portfolio-description">
                 <h2>The Goal:</h2>
+
                 <p>
-                  Build and style a fully functional image gallery application.
-                  Gallery must only be accessible to registered users and become
-                  unavailable upon logout.
+                  Create a working GIF based on a photo or video inside Adobe
+                  Photoshop.
                 </p>
                 <h2>The Process and Result:</h2>
+
                 <p>
-                  Using PHP, SQL, JavaScript, HTML, CSS and Bootstrap, I created
-                  an image gallery that allows a registered user to select files
-                  from their computer to upload directly to their private
-                  gallery. The gallery is secured via a login/logout process.
+                  Using a reference photo from a copyright-free resource, I
+                  created a Graphics Interchange Format image. The photo I chose
+                  did such a great job of capturing that moment in the sun that
+                  I strived to maintain that feeling by creating a natural-ish
+                  flight pattern for the birds. I did this by creating
+                  twenty-four individual layers, each rotated by fifteen
+                  degrees. I slighly altered the positioning of each bird each
+                  time. Then using the Motion panel, I timed them out to create
+                  a continuous motion.
                 </p>
               </div>
             </div>
