--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
           <div class="section-title">
             <h2>About</h2>
             <blockquote>
-              "We are all failures - at least the best of us are."<br>
-              - J.M. Barrie
+              "Around here, however, we don't look backwards for very long. We<br> 
+              <b><i>KEEP MOVING FORWARD</i></b><br>
+              opening up new doors and doing new things because we are curious...<br>
+              and curiosity keeps leading us down new paths."<br> 
+              - Walt Disney
             </blockquote>
           </div>
 
@@ -156,12 +159,13 @@
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Degree:</strong>
-                      <span>AAT - Web Development</span>
+                      <span>AAT - Web Development<br>
+                      AAT - Digital Media Arts</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
                       <strong>Currently Earning:</strong>
-                      <span>AAT - Digital Media Arts</span>
+                      <span>Bachelor of Arts - Digital Technology and Culture</span>
                     </li>
                     <!-- <li>
                       <i class="bi bi-chevron-right"></i>
@@ -172,7 +176,7 @@
                 </div>
               </div>
               <p>
-                Oftentimes, the logical side of my brain is at war with my creativity. However, I have found my niche in Web Development and Design. Utilizing my analytical and critical thinking skills, combined with creativity, color theory, UX/UI, and always keeping accessibility in mind, I am able to create websites from scratch or use platforms like WordPress to design and deliver high quality, functional, and engaging projects that help people communicate a message to the entire world.
+                Utilizing my analytical and critical thinking skills, combined with creativity, color theory, UX/UI, and always keeping accessibility in mind, I am able to create websites, logos, social media campaigns, marketing material, apps and much more from scratch or use platforms like WordPress to design and deliver high quality, functional, and engaging projects that help people communicate a message to the entire world.
               </p>
               <p>
                 With many years in the service industry, I continue to place client satisfaction above all else. To me, the client and developer/designer are a team, working toward a common goal. I value communication and directness. I do my best to make sure each party is clear about the process and expectations ahead of time. Surprises and roadblocks are an inherent part of the development process and will surely crop up along the way. However, if everyone feels free to discuss it openly, most problems become opportunities to learn and grow.</p>
@@ -319,7 +323,7 @@
                 <div class="col-lg-3">  
                   <ul>
                       <li><i class="bi bi-chevron-right"></i>
-                      <strong>Adobe Creative Cloud</strong></li>
+                      <strong>Adobe After Effects</strong></li>
                       <li><i class="bi bi-chevron-right"></i>
                         <strong>Adobe Photoshop</strong></li>
                       <li><i class="bi bi-chevron-right"></i>
@@ -340,7 +344,7 @@
           <div class="section-title">
             <h2>Resume</h2>
             <p>
-              As a recent graduate of the AAT - Web Development degree program from Clark College, an employee of the college's literary publication, the <i>Phoenix</i>, and current student of the AAT - Digital Media Arts program, I have had the amazing opportunity to gain real life experience alongside my formal education.
+              As a recent graduate of the AAT - Digital Media Arts, previous graduate of the AAT - Web Development degree program from Clark College, an employee of the college's literary publication, the <i>Phoenix</i>, and beginning a bachelor's degree in Digital Technology and Culture at WSU this fall, I have had the amazing opportunity to gain real life experience alongside my formal education.
             </p>
           </div>
 
@@ -357,7 +361,7 @@
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>Associate's of Applied Technology in Digital Media Arts</h4>
-                <h5>7/2021 - Present</h5>
+                <h5>Graduated: 6/2022</h5>
                 <p><em>Clark College, Vancouver, WA</em></p>
                 <p>
                   Coursework will include: Digital Painting and Illustration, Motion Graphics and Animation I &amp; II, Video and Sound Production II, Photoshop Raster Graphics, Illustrator Vector Graphics, Time-based Art and Design, Portfolio 
@@ -365,7 +369,7 @@
               </div>
               <div class="resume-item">
                 <h4>Associate's of Applied Technology in Web Development</h4>
-                <h5>9/2019 - 6/2021</h5>
+                <h5>Graduated:  6/2021</h5>
                 <p><em>Clark College, Vancouver, WA</em></p>
                 <p>
                   Coursework included: HTML5/CSS3, Python, JavaScript, C#, Database Administration, Web and Interface Design I &amp; II, UX/UI Design, WordPress, Adobe: Photoshop and Illustrator, Video and Sound Production I, Web Content and Social Media Marketing, Web Portfolio
@@ -391,8 +395,8 @@
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
                 <h4>Web Developer/Graphic Designer</h4>
-                <h5>3/2021 - Present</h5>
-                <p><em>Clark College, Ignite: Phoenix Lit, Vancouver, Wa </em></p>
+                <h5>3/2021 - 12/2021</h5>
+                <p><em>Clark College, Columbia Writers' Series and Ignite: Phoenix Lit, Vancouver, Wa </em></p>
                 <ul>
                   <li>
                     Lead in the design, development, and implementation of the
@@ -471,6 +475,41 @@
               </ul>
             </div>
           </div>
+
+          <div
+            class="row portfolio-container"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/book-cover-secret-garden.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Book Cover Redesign</h4>
+                  <p>Graphic Imge</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/book-cover-secret-garden.png" 
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="App 2"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a
+                      href="portfolio-details-6.html"
+                      class="portfolio-details-lightbox"
+                      data-glightbox="type: external"
+                      title="Portfolio Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           <div
             class="row portfolio-container"
@@ -626,6 +665,67 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/cat-cult-article-visual.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Article Illustration</h4>
+                  <p>Scalable Vector Graphic</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/shapes-fairy-1.jpg"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="Web 2"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a
+                      href="portfolio-details-7.html"
+                      class="portfolio-details-lightbox"
+                      data-glightbox="type: external"
+                      title="Portfolio Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/newsletter-template-penguin-digest.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-info">
+                  <h4>Newsletter</h4>
+                  <p>Template</p>
+                  <div class="portfolio-links">
+                    <a
+                      href="assets/img/portfolio/newsletter-template-penguin-digest.png"
+                      data-gallery="portfolioGallery"
+                      class="portfolio-lightbox"
+                      title="Web 2"
+                      ><i class="bx bx-plus"></i
+                    ></a>
+                    <a
+                      href="portfolio-details-8.html"
+                      class="portfolio-details-lightbox"
+                      data-glightbox="type: external"
+                      title="Portfolio Details"
+                      ><i class="bx bx-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
 
           </div>
         </div>
